erDiagram
  RUNS {
    INTEGER id PK
    TEXT started_at
    TEXT status
    TEXT completed_at
  }

  FEED_ITEMS {
    INTEGER id PK
    INTEGER run_id FK
    TEXT feed_name
    TEXT guid_or_link
    TEXT raw_title
    TEXT published_at
    TEXT download_url
  }

  CANDIDATE_STATE {
    TEXT identity_key PK
    TEXT media_type
    TEXT status
    TEXT queued_at
    TEXT pirate_claw_disposition
    TEXT reconciled_at
    INTEGER transmission_torrent_id
    TEXT transmission_torrent_name
    TEXT transmission_torrent_hash
    INTEGER transmission_status_code
    REAL transmission_percent_done
    TEXT transmission_done_date
    TEXT transmission_download_dir
    TEXT rule_name
    INTEGER score
    TEXT reasons_json
    TEXT raw_title
    TEXT normalized_title
    INTEGER season
    INTEGER episode
    INTEGER year
    TEXT resolution
    TEXT codec
    TEXT feed_name
    TEXT guid_or_link
    TEXT published_at
    TEXT download_url
    INTEGER first_seen_run_id FK
    INTEGER last_seen_run_id FK
    INTEGER last_feed_item_id FK
    TEXT updated_at
  }

  FEED_ITEM_OUTCOMES {
    INTEGER id PK
    INTEGER run_id FK
    INTEGER feed_item_id FK
    TEXT status
    TEXT identity_key
    TEXT rule_name
    TEXT message
    TEXT created_at
  }

  TMDB_MOVIE_CACHE {
    TEXT match_key PK
    INTEGER tmdb_id
    INTEGER is_negative
    TEXT expires_at
    TEXT title
    TEXT overview
    TEXT poster_path
    TEXT backdrop_path
    REAL vote_average
    INTEGER vote_count
    TEXT genre_ids_json
    TEXT release_date
  }

  TMDB_TV_CACHE {
    TEXT match_key PK
    INTEGER tmdb_id
    INTEGER is_negative
    TEXT expires_at
    TEXT name
    TEXT overview
    TEXT poster_path
    TEXT backdrop_path
    TEXT network_name
    REAL vote_average
    INTEGER vote_count
    TEXT genre_ids_json
    TEXT first_air_date
    INTEGER number_of_seasons
    TEXT seasons_json
  }

  TMDB_TV_SEASON_CACHE {
    TEXT show_match_key PK
    INTEGER season_number PK
    TEXT expires_at
    TEXT episodes_json
  }

  PLEX_MOVIE_CACHE {
    TEXT title PK
    INTEGER year PK
    TEXT plex_rating_key
    INTEGER in_library
    INTEGER watch_count
    TEXT last_watched_at
    TEXT cached_at
  }

  PLEX_TV_CACHE {
    TEXT normalized_title PK
    TEXT plex_rating_key
    INTEGER in_library
    INTEGER watch_count
    TEXT last_watched_at
    TEXT cached_at
  }

  PLEX_AUTH_IDENTITY {
    INTEGER singleton PK
    TEXT client_identifier
    TEXT client_name
    TEXT platform_name
    TEXT key_id
    TEXT key_algorithm
    TEXT public_jwk_json
    TEXT private_key_pem
    TEXT refresh_token
    TEXT token_expires_at
    TEXT last_authenticated_at
    TEXT last_error
    TEXT reconnect_required_at
    TEXT reconnect_required_reason
    TEXT renewal_started_at
    TEXT created_at
    TEXT updated_at
  }

  PLEX_AUTH_SESSIONS {
    TEXT id PK
    TEXT oauth_state
    TEXT code_verifier
    INTEGER pin_id
    TEXT pin_code
    TEXT redirect_uri
    TEXT return_to
    TEXT opened_at
    TEXT expires_at
    TEXT status
    TEXT completed_at
    TEXT cancelled_at
  }

  RUNS ||--o{ FEED_ITEMS : records
  RUNS ||--o{ FEED_ITEM_OUTCOMES : records
  RUNS ||--o{ CANDIDATE_STATE : first_seen_in
  RUNS ||--o{ CANDIDATE_STATE : last_seen_in
  FEED_ITEMS ||--o| CANDIDATE_STATE : last_seen_item
  FEED_ITEMS ||--o{ FEED_ITEM_OUTCOMES : produces
  TMDB_TV_CACHE ||--o{ TMDB_TV_SEASON_CACHE : seasons
